--- a/public/css/product_info.css
+++ b/public/css/product_info.css
@@ -70,7 +70,21 @@ form#productInfo_currency{
 	padding: 0;
 	width: auto;
 }
-
+.img-popup {
+	position: fixed;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
+	background: rgba(0,0,0,0.8);
+  
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+.img-popup img {
+max-width: 80%;
+max-height: 80%;
+}
 .productInfo_currency_select {
 	position: relative;
 	top: 3px;
