--- a/public/css/960.css
+++ b/public/css/960.css
@@ -24,6 +24,38 @@ width : 940px;
 .alpha {
 margin-left : 0;
 }
+/* custom classes for table sorter */
+.tablesorter-header {
+    cursor: pointer;
+    /* any other styles you want to apply to all header cells */
+}
+
+.tablesorter-headerAsc::before {
+    content: '';
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #000;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+    /* Adjust size */
+    transform: translateY(-50%);
+    /* any other styles for ascending order indicator */
+}
+
+.tablesorter-headerDesc::after {
+    content: '';
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #000;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 5px;
+    /* Adjust size */
+    transform: translateY(50%);
+    /* any other styles for descending order indicator */
+}
+
 .omega {
 margin-right : 0;
 }
